--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
       <div class="menu">
         <div class="menu-bar">
           <ul>
-            <li>Now playing</li>
+            <li class="active">Popular</li>
             <li>Upcoming</li>
             <li>Top rated</li>
-            <li>Popular</li>
           </ul>
         </div>
 
@@ -37,8 +36,8 @@
 
       <div class="navigation">
         <div class="nav-icon home">
-          <i class="fa fa-house"></i>
-          <p>Home</p>
+          <i class="fa fa-house selected"></i>
+          <p class="selected">Home</p>
         </div>
         <div class="nav-icon search">
           <i class="fa fa-magnifying-glass"></i>
@@ -51,6 +50,6 @@
       </div>
     </div>
 
-    <script src="main.js" type="module"></script>
+    <script src="main.js" ></script>
   </body>
 </html>
