added watch list

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <div id="app">
       <div class="search-bar">
         <i class="fa fa-magnifying-glass"></i>
-        <input type="text" placeholder="Search" />
+        <input class="input" type="text" placeholder="Search" />
       </div>
+      <div class="search-movies hidden"></div>
       <div class="top-rated"></div>
 
       <div class="menu">
@@ -36,7 +37,7 @@
       </div>
 
       <div class="navigation">
-        <div class="nav-icon home">
+        <div class="nav-icon home ">
           <i class="fa fa-house selected"></i>
           <p class="selected">Home</p>
         </div>
@@ -46,7 +47,7 @@
         </div>
         <div class="nav-icon watch-list">
           <i class="fa fa-bookmark"></i>
-          <p >Watch list</p>
+          <p>Watch list</p>
         </div>
         </div>
         
