pagination/rendering/animation

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
         </div>
 
         <div class="menu-movies"></div>
+ 
       </div>
-
+      <div>
+  <ul class="pagination"></ul>
+      </div>
       <div class="navigation">
         <div class="nav-icon home ">
           <i class="fa fa-house selected"></i>
@@ -43,7 +46,7 @@
         </div>
         <div class="nav-icon search">
           <i class="fa fa-magnifying-glass"></i>
-          <p >Search</p>
+          <p>Search</p>
         </div>
         <div class="nav-icon watch-list">
           <i class="fa fa-bookmark"></i>
@@ -57,6 +60,6 @@
         
     </div>
 
-    <script src="main.js" ></script>
+    <script src="min.main.js" ></script>
   </body>
 </html>
